# rules_pyo3

./: .bazelrc  MODULE.bazel
.github/workflows/: build.yaml
examples/string_sum/: BUILD.bazel  MODULE.bazel  README.md  string_sum.rs  string_sum_test.py
pyo3/: extensions.bzl  repositories.bzl
pyo3/private/: pyo3.bzl
