"""abrisco/rules_pyo3"""

module(
    name = "rules_pyo3",
    version = "0.0.7",
)

bazel_dep(
    name = "rules_rust",
    version = "0.56.0",
)
bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

pyo3 = use_extension("@rules_pyo3//pyo3:extensions.bzl", "pyo3")

bazel_dep(
    name = "stardoc",
    version = "0.7.2",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
