"""abrisco/rules_pyo3"""

module(
    name = "rules_pyo3",
    version = "0.0.7",
)

bazel_dep(
    name = "rules_rust",
    version = "0.56.0",
)
bazel_dep(
    name = "rules_python",
    version = "1.0.0",
)
bazel_dep(
    name = "bazel_skylib",
    version = "1.7.1",
)
bazel_dep(
    name = "platforms",
    version = "0.0.10",
)

pyo3_vendored = use_extension("@rules_pyo3//pyo3:extensions.bzl", "rpyo3c")
use_repo(pyo3_vendored, "rpyo3c", "rpyo3c__pyo3-0.21.2", "rpyo3c__pyo3-ffi-0.21.2")

pyo3 = use_extension("@rules_pyo3//pyo3:extensions.bzl", "pyo3")
use_repo(pyo3, "pyo3_toolchains")
pyo3.toolchain(
    name = "pyo3_toolchains",
    pyo3 = "@rpyo3c//:pyo3",
)

register_toolchains("@pyo3_toolchains//:all")

bazel_dep(
    name = "stardoc",
    version = "0.7.2",
    dev_dependency = True,
    repo_name = "io_bazel_stardoc",
)
